# r3gl-mono

./: .gitignore  projects.toml
r3gl-app/: Cargo.toml
r3gl-app/src/: editor.rs  identifier.rs  lib.rs  state.rs
r3gl-app/src/beatmap/: beatmap.rs  mod.rs
r3gl-app/src/beatmap/component/: mod.rs  time.rs  variant.rs
r3gl-app/src/beatmap/component/adapter/: taiko.rs
r3gl-app/src/beatmap/osu_taiko/: hitobject.rs  mod.rs  parser.rs
r3gl-app/src/beatmap/parser/: mod.rs  osu_taiko.rs
r3gl-app/src/beatmap/taiko/: hitobject.rs  mod.rs
r3gl-app/src/egui/: mod.rs  view.rs  window.rs
r3gl-app/src/graphics/: mod.rs
r3gl-app/src/graphics/pipeline/: mod.rs  taiko.rs  taiko.wgsl
r3gl-app/src/graphics/primitive/mesh/: taiko.rs
r3gl-app/src/project/: mod.rs  project.rs  project_manager.rs  projects.rs
r3gl-app/src/screen/: egui.rs  mod.rs  taiko.rs
r3gl-app/src/store/: texture.rs
r3gl-app/src/unit/: selection.rs
r3gl-app/src/view/: menu.rs  mod.rs
r3gl-app/src/view/window/: bindings.rs  mod.rs  startup.rs  timeline.rs
r3gl-app/src/windows/: mod.rs  startup.rs  timeline.rs
r3gl-audio/: Cargo.toml
r3gl-audio/src/: lib.rs
r3gl-client/: Cargo.toml
r3gl-client/src/: main.rs
wcore/: Cargo.toml
wcore/src/: app.rs  bindings.rs  clock.rs  collider.rs  egui.rs  input.rs  lib.rs  screen.rs  timer.rs  unit.rs  utils.rs
wcore/src/egui/: egui.rs  mod.rs  view.rs  window.rs
wcore/src/graphics/: context.rs  depth_buffer.rs  mod.rs  scene.rs  texture.rs
wcore/src/graphics/pipeline/: mod.rs  model.rs  model.wgsl  overlay.rs  overlay.wgsl
wcore/src/graphics/primitive/mesh/data/: vertex.rs
