[package]
name = "r3gl-app"
version = "0.1.0"
edition = "2021"

[dependencies]
wcore = { path = "../wcore" }
r3gl-audio = { path = "../r3gl-audio" }
wgpu = "0.14.0"
egui = "0.19.0"
egui_demo_lib = "0.19.0"
color-eyre = "0.6.2"
log = "0.4.17"
env_logger = "0.9.1"
winit = "0.27.3"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
str-macro = "1.0.0"
cgmath = "0.18.0"
bytemuck = "1.12.1"
intbits = "0.2.0"
instant = "0.1.12"
maplit = "1.0.2"
crossbeam = "0.8.2"