[package]
name = "r3gl-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
delegate = "0.8.0"
fragile = "1.2.1"
color-eyre = "0.6.2"
log = "0.4.17"
cpal = "0.14.0"
rubato = "0.12.0"
symphonia = { version = "0.5.1", features = ["mp3"] }
instant = "0.1.12"
itertools = "0.10.5"
crossbeam = "0.8.2"