[package]
name = "r3gl-client"
version = "0.1.0"
edition = "2021"

[dependencies]
wcore = { path = "../wcore" }
r3gl-audio = { path = "../r3gl-audio" }
r3gl-app = { path = "../r3gl-app" }
color-eyre = "0.6.2"
log = "0.4.17"
env_logger = "0.9.1"
str-macro = "1.0.0"
dynamic-arena = "0.1.6"
maplit = "1.0.2"
winit = "0.27.3"

[profile.dev.package.r3gl-audio]
opt-level = 3
debug = false
overflow-checks = false

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
debug = false
overflow-checks = false

[profile.dev.package.rubato]
opt-level = 3
debug = false
overflow-checks = false

[profile.dev.package.cpal]
opt-level = 3
debug = false
overflow-checks = false

[profile.dev.package.itertools]
opt-level = 3
debug = false
overflow-checks = false

[profile.dev.package.crossbeam]
opt-level = 3
debug = false
overflow-checks = false