[package]
name = "wcore"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.2.4"
winit = "0.27.3"
wgpu = "0.14.0"
instant = "0.1.12"
egui = "0.19.0"
egui_wgpu_backend = "0.20.0"
egui_demo_lib = "0.19.0"
epi = "0.17.0"
bytemuck = "1.12.1"
cgmath = "0.18.0"
image = "0.24.4"
color-eyre = "0.6.2"
crossbeam = "0.8.2"
fxhash = "0.2.1"